# hamiltonian-nn

./: analyze-spring2.ipynb  autograd-example.ipynb  pyproject.toml
