[tool.poetry]
name = "hamiltonian-nn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.14.1"
torch = "2.2.2"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
autograd = "^1.7.0"
imageio = "^2.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
